--- a/INRC_Contracts/package.json
+++ b/INRC_Contracts/package.json
@@ -28,12 +28,14 @@
     "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.3",
+    "@uniswap/v4-core": "^1.0.2",
     "chai": "^4.3.6",
     "dotenv": "^16.0.3",
     "hardhat-chai-matchers": "0.0.1",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.2",
     "solidity-coverage": "^0.7.22",
+    "solmate": "^6.8.0",
     "typechain": "^8.1.0",
     "yesno": "^0.4.0"
   },
